--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
                     </select>
                 </div>
                 <div class="form-group">
+                    <label for="member-status">Status *</label>
+                    <select id="member-status" required>
+                        <option value="">Select a status</option>
+                        <option value="core">Core</option>
+                        <option value="non-core">Non-Core</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label for="member-expertise">Content Expertise</label>
                     <textarea id="member-expertise" rows="3"></textarea>
                 </div>
